# boinctui

./: About.md  CMakeLists.txt  Dockerfile  Downloads.md  Makefile.am  Makefile.in  ProjectHome.md  README.md  Screenshots.md  changelog  config  configure.ac  configure.in
.github/workflows/: ci.yml
branches/2.1.1/: config
branches/2.1.1/src/: mainwin.cpp  nevent.h  nview.cpp  nvline.cpp
branches/2.2.1/src/: nhline.h  nselectlist.cpp  srvdata.h  tuievent.h
branches/2.3.0dev/: Makefile.in  configure.in
branches/2.3.0dev/debian/: changelog
branches/2.3.0dev/src/: cfg.h  mainprog.cpp  mainprog.h  mainwin.cpp  resultparse.h  srvdata.cpp  srvdata.h  taskinfowin.cpp  taskinfowin.h  taskwin.cpp  topmenu.cpp  tuievent.h
branches/2.3.1/: config
branches/2.3.1/debian/: control
branches/2.3.1/src/: infopanel.cpp  infopanel.h  mainprog.h  ngroup.cpp  nprogram.cpp  nselectlist.cpp  srvdata.cpp  taskwin.cpp
branches/2.3.2/: Makefile.in
branches/2.3.2/debian/: changelog
branches/2.3.2/src/: addmgrform.cpp  addmgrform.h  msgwin.cpp  nscrollbar.h  nscrollview.h  taskwin.cpp
branches/2.3.2b/: changelog  config  configure.in
branches/2.3.2b/debian/: copyright
branches/2.3.2b/src/: about.h  cfg.cpp  cfgform.cpp  helpwin.cpp  mainprog.cpp  nevent.h  nform.cpp  nprogram.cpp  nscrollview.cpp  nview.cpp  resultparse.cpp  taskwin.cpp  taskwin.h  topmenu.cpp  tui-main.cpp  tuievent.h
branches/2.3.3/debian/: rules
branches/2.3.3/src/: infopanel.cpp  nmessagebox.cpp  topmenu.cpp
branches/2.3.3deb/debian/: changelog
branches/2.3.3deb/redhat/: boinctui.spec
branches/2.3.3deb/src/: kclog.cpp  net.cpp  nhline.cpp  nscrollbar.cpp  nvline.cpp  taskinfowin.h
branches/debiansid/: changelog  config
branches/debiansid/debian/: boinctui.1  changelog  control  rules  watch
branches/debiansid/src/: about.cpp  addprojectform.h  cfg.cpp  helpwin.cpp  helpwin.h  kclog.h  mainprog.cpp  mainprog.h  mainwin.cpp  mbstring.cpp  ncolorstring.cpp  nform.cpp  ngroup.h  nmenu.cpp  nmessagebox.h  nprogram.h  nscrollbar.cpp  nstatictext.cpp  nstatictext.h  nvline.h  resultparse.cpp  srvdata.cpp  srvdata.h  taskinfowin.cpp  taskwin.h  topmenu.h
debian/: boinctui.1  changelog  control  copyright  lintian-overrides  manpages  rules  watch
debian/upstream/: metadata
redhat/: boinctui.spec
src/: Makefile.am  about.cpp  about.h  addmgrform.cpp  addmgrform.h  addprojectform.cpp  addprojectform.h  cfg.cpp  cfg.h  cfgform.cpp  cfgform.h  commondef.h  helpwin.cpp  helpwin.h  infopanel.cpp  infopanel.h  kclog.cpp  kclog.h  mainprog.cpp  mainprog.h  mainwin.cpp  mainwin.h  mbstring.cpp  mbstring.h  msgwin.cpp  msgwin.h  ncolorstring.cpp  ncolorstring.h  net.cpp  net.h  nevent.h  nform.cpp  nform.h  ngroup.cpp  ngroup.h  nhline.cpp  nhline.h  nmenu.cpp  nmenu.h  nmessagebox.cpp  (+29 more)
tags/0.0.1/: Makefile.in
tags/0.0.1/redhat/: boinctui.spec
tags/0.0.1/src/: infopanel.h  mainprog.cpp  mainwin.cpp  nform.h  ngroup.cpp  nprogram.cpp  nscrollview.cpp  nscrollview.h  nvline.h  nwin.h  resultdom.h  resultparse.cpp  srvdata.h  taskwin.cpp
tags/1.0.0/: config
tags/1.0.0/debian/: changelog
tags/1.0.0/src/: cfgform.cpp  dummyexpat.cpp  helpwin.cpp  infopanel.cpp  mainprog.cpp  mainwin.cpp  msgwin.cpp  ncolorstring.h  nevent.h  ngroup.h  nstatictext.h  resultdom.cpp  srvdata.cpp  taskwin.h  topmenu.h  tui-main.cpp
tags/1.2.0/redhat/: boinctui.spec
tags/1.2.0/src/: cfg.cpp  cfg.h  helpwin.h  mainwin.cpp  mbstring.cpp  net.cpp  ngroup.h  nmenu.h  nstatictext.h  srvdata.cpp  srvdata.h  topmenu.cpp  topmenu.h
tags/2.1.0/debian/: control
tags/2.1.0/src/: helpwin.cpp  kclog.cpp  mbstring.h  msgwin.cpp  nhline.h  nmenu.cpp  nrect.h  nview.h  nvline.cpp  topmenu.cpp  topmenu.h
trunk/: Makefile.in  changelog  config  configure.in
trunk/debian/: changelog  control  rules  watch
trunk/redhat/: boinctui.spec
trunk/src/: about.cpp  addmgrform.cpp  addmgrform.h  addprojectform.cpp  cfg.cpp  cfg.h  cfgform.cpp  cfgform.h  dummy.cpp  helpwin.cpp  helpwin.h  infopanel.cpp  infopanel.h  kclog.h  mainprog.cpp  mainprog.h  mainwin.cpp  mainwin.h  mbstring.cpp  msgwin.cpp  msgwin.h  ncolorstring.cpp  ncolorstring.h  net.cpp  net.h  nevent.h  nform.cpp  nform.h  ngroup.cpp  ngroup.h  nhline.h  nmenu.cpp  nmenu.h  nmessagebox.cpp  nprogram.cpp  nprogram.h  nrect.h  nscrollbar.cpp  nscrollview.cpp  nscrollview.h  (+21 more)
wiki/: About.wiki  AboutBoinctui.wiki  Downloads.wiki  Screenshots.wiki
